# digit

./: .gitignore  Cargo.toml
src/: file_buffer.rs  filebuffer.rs  main.rs
src/backend/: file_buffer.rs  mod.rs
src/frontend/: main.rs  mod.rs  wgpu_state.rs
src/frontend/rendering/: mesh.rs  mod.rs  render.rs  render_state.rs
src/frontend/rendering/shaders/: shader.wgsl
src/intermediary/: message_queue.rs
