[package]
name = "digit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jumprope = "1.1.0"
env_logger = "0.10"
log = "0.4"
wgpu = "0.14.2"
glfw = "0.47"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
once_cell = "1.3.1"

#for flamegraph
[profile.release]
debug = true
